<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/foundation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="44dp"
        android:text="TextView" />

    <Button
        android:id="@+id/forwardButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stopButton"
        android:layout_centerHorizontal="true"
        android:text="@string/forward" />

    <Button
        android:id="@+id/backwardButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/backward" />

    <Button
        android:id="@+id/rightButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forwardButton"
        android:layout_toEndOf="@+id/forwardButton"
        android:text="@string/right" />

    <Button
        android:id="@+id/leftButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forwardButton"
        android:layout_toStartOf="@+id/forwardButton"
        android:text="@string/left" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/backwardButton"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_red_dark"
        android:text="@string/stop" />

    <Button
        android:id="@+id/rightSpinButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/backwardButton"
        android:layout_toEndOf="@+id/forwardButton"
        android:text="@string/_90_right" />

    <Button
        android:id="@+id/leftSpinButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/backwardButton"
        android:layout_toStartOf="@+id/forwardButton"
        android:text="@string/_90_left" />

    <Button
        android:id="@+id/downSpeedButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/forwardButton"
        android:layout_toStartOf="@+id/forwardButton"
        android:text="@string/downSpeedButton" />

    <Button
        android:id="@+id/upSpeedButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/forwardButton"
        android:layout_toEndOf="@+id/forwardButton"
        android:text="@string/upSpeedButton" />

    <Switch
        android:id="@+id/connectBluetoothButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:text="@string/bluetooth" />

    <Switch
        android:id="@+id/btnMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="290dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="15dp"
        android:text="@string/mode"
        android:textAlignment="textEnd"
        android:textDirection="locale" />


</RelativeLayout>
